--- a/account-webs/src/main/webapp/WEB-INF/web.xml
+++ b/account-webs/src/main/webapp/WEB-INF/web.xml
@@ -1,58 +1,98 @@
 <!DOCTYPE web-app    
 PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"    
-"http://java.sun.com/dtd/web-app_2_3.dtd">   
-<web-app>  
-  <display-name>Sample Maven Project: Account Service</display-name>
-  <context-param>
-  	<param-name>contextConfigLocation</param-name>
-  	<param-value>
-  	    classpath:/account-email.xml
-        classpath:/account-persist.xml
-  		classpath:/account-captcha.xml
-  		classpath:/account-service.xml
-  	</param-value>
-  </context-param>
-  <!-- <filter>
-  	<filter-name></filter-name>
-  	<filter-class></filter-class>
-  </filter>
-  <filter-mapping>
-  	<filter-name></filter-name>
-  	<url-pattern></url-pattern>
-  </filter-mapping> -->
-  <listener>
-  	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
-  <servlet>
-  	<servlet-name>CaptchaImageServlet</servlet-name>
-  	<servlet-class>com.juvenxu.mvnbook.account.web.CaptchaImageServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>SignUpServlet</servlet-name>
-  	<servlet-class>com.juvenxu.mvnbook.account.web.SignUpServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>ActivateServlet</servlet-name>
-  	<servlet-class>com.juvenxu.mvnbook.account.web.ActivateServlet</servlet-class>
-  </servlet>
-  <servlet>
-  	<servlet-name>LoginServlet</servlet-name>
-  	<servlet-class>com.juvenxu.mvnbook.account.web.LoginServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>CaptchaImageServlet</servlet-name>
-  	<url-pattern>/captcha_image</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>SignUpServlet</servlet-name>
-  	<url-pattern>/signup</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>ActivateServlet</servlet-name>
-  	<url-pattern>/activate</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>LoginServlet</servlet-name>
-  	<url-pattern>/login</url-pattern>
-  </servlet-mapping>
+"http://java.sun.com/dtd/web-app_2_3.dtd">
+<web-app>
+	<display-name>Sample Maven Project: Account Service</display-name>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			classpath:/account-email.xml
+			classpath:/account-persist.xml
+			classpath:/account-captcha.xml
+			classpath:/account-service.xml
+		</param-value>
+	</context-param>
+	<!-- <filter> <filter-name></filter-name> <filter-class></filter-class> 
+		</filter> <filter-mapping> <filter-name></filter-name> <url-pattern></url-pattern> 
+		</filter-mapping> -->
+	<!-- 顺序很重要 -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<!-- 配置DispatchcerServlet -->
+	<servlet>
+		<servlet-name>springDispatcherServlet</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- 配置Spring mvc下的配置文件的位置和名称 -->
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>classpath:springmvc.xml</param-value>
+			<!-- <param-value>/WEB-INF/springmvc.xml</param-value> -->
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>springDispatcherServlet</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.css</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.gif</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.jpg</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.js</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.html</url-pattern>
+	</servlet-mapping>
+	
+	<!-- servlet config -->
+	<!-- <servlet>
+		<servlet-name>CaptchaImageServlet</servlet-name>
+		<servlet-class>com.juvenxu.mvnbook.account.web.CaptchaImageServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>SignUpServlet</servlet-name>
+		<servlet-class>com.juvenxu.mvnbook.account.web.SignUpServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ActivateServlet</servlet-name>
+		<servlet-class>com.juvenxu.mvnbook.account.web.ActivateServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>com.juvenxu.mvnbook.account.web.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CaptchaImageServlet</servlet-name>
+		<url-pattern>/captcha_image</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>SignUpServlet</servlet-name>
+		<url-pattern>/signup</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ActivateServlet</servlet-name>
+		<url-pattern>/activate</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping> -->
 </web-app>
