--- a/account-webs/src/main/webapp/WEB-INF/web.xml
+++ b/account-webs/src/main/webapp/WEB-INF/web.xml
@@ -15,8 +15,12 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 	<!-- <filter> <filter-name></filter-name> <filter-class></filter-class> 
 		</filter> <filter-mapping> <filter-name></filter-name> <url-pattern></url-pattern> 
 		</filter-mapping> -->
-	<!-- 顺序很重要 -->
+	<!-- 顺序很重要-->
 	<listener>
+		<!-- ContextLoaderListener作用  
+		     1.监听ServletContext 将Servlet容器绑定到Spring框架上
+		     2.将WebApplicationContext IOC容器初始化
+		-->
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
